# ManiMind

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  赛琳娜.m4a
.claude/: settings.local.json
backend/: __init__.py  main.py
backend/api/: __init__.py  capabilities.py  common.py  contexts.py  events.py  execution.py  inputs.py  projects.py  reviews.py  tasks.py
configs/: cauchy-backward-induction-real.json  cauchy-multi-doc-demo.json  html-worker-validation.example.json  max-function-review-demo.json  pipeline.example.json  stage1-golden-path.example.json
docs/: ClaudeCode抽取清单.md  README.md  architecture.canvas  html-worker验证记录.md  上下文与状态设计.md  代码审计.md  代码组织.md  初始化执行A-F-2026-05-10.md  初始化计划.md  前端控制台骨架方案.md  前端骨架对齐审查.md  前端骨架对齐闭环记录.md  强前置条件约束.md  状态闭环与控制台路线.md  真实多角色API与F5后处理改造-2026-05-11.md  第三方整合.md  第三阶段.md  第四阶段.md  角色职责与能力分发说明.md  通用项目架构模板.md  阶段1计划.md
docs/canvas-dev/: README.md  workflow.md
manim-worker-pov/: README.md
resources/: README.md
scripts/: check-prerequisites.ps1  f5_tts_generate.py  finalize-with-f5-tts.ps1  html_to_video.js  init-workspace.ps1  sync-thirdparty-assets.ps1
tests/: test_bootstrap.py  test_capability_and_input.py  test_context_assembly.py  test_contract_store.py  test_executor_output_normalization.py  test_executor_review_flow.py  test_html_worker_validation.py  test_post_produce_segment_collection.py  test_review_schema_evidence_checks.py  test_runtime_store.py  test_stage_orchestrator_trace.py  test_task_board.py  test_tts.py  test_worker_adapters.py  test_workflow.py
(+105 files in other folders)
